[tool.poetry]
name = "sbp-tests"
version = "0.1.0"
description = ""
authors = ["Joe Lynch <joelynch112@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
sbp = "^4.0.3"
pandas = "^1.3.4"
isort = "^5.10.1"
tqdm = "^4.62.3"
plotly = "^5.4.0"
folium = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.9"
isort = "^5.10.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
